# coursera-part-a

./: .gitignore  README  notatki-ogolne.txt  peer-graded-1.txt
coursera-A1.0/: .cproject  .project
coursera-A1.0/src/: coursera-A1.0.cpp
coursera-A2.0/: .cproject  .project
coursera-A2.0/src/: coursera-A2.0.cpp
coursera-A2.10-point/: .cproject  .project
coursera-A2.10-point/src/: coursera-A2.10-point.cpp  point.cpp  point.h
coursera-A2.4/: .cproject  .project
coursera-A2.4/src/: coursera-A2.4.cpp  list_graph.cpp  list_graph.h  logger.hpp
coursera-A4.12-STL-string/src/: coursera-A4.12-STL-string.cpp
coursera-B1.01/src/: Makefile  main.cpp
coursera-B1.02/: CMakeLists.txt
coursera-B1.02/src/: card.cpp  card.h  pips.cpp  pips.h  poker.cpp
coursera-B1.06/: Makefile  palindrome.cpp
coursera-B1.09/: Makefile
coursera-B1.12/: for_each_ex1.cpp
coursera-B2/: for_each_learning.cpp  grad_new.cpp.cpp  output-grad_new.cpp.cpp  output-point.cpp  output-point2.cpp  output-virt_confused.cpp  output-virt_correct.cpp  output-virt_f.cpp  tuple  tuple_random_lambda_with_code.cpp  virt_confused.cpp
coursera-B3/: build.sh  output-movesemantics.3.1.cpp  output-polish-v2_3.8.cpp
homework-A1/: .cproject  .project
homework-A2/: .cproject  .project
homework-A2/src/: peer-graded-2.cpp
homework-A3/: .cproject  .project
homework-A3/src/: homework-A3.cpp
homework-B1/: Makefile  README.txt
homework-B2/: Makefile
peer-graded-1/: .cproject  .project
peer-graded-2/: .cproject  .project
temp/: peer1.cpp  peer2.cpp  ćwiczenia_wykład.cpp
(+15 files in other folders)
